--- a/SoldiersGame/SoldiersGame.csproj
+++ b/SoldiersGame/SoldiersGame.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Engine\Sound.cs" />
     <Compile Include="Engine\Sprite.cs" />
     <Compile Include="Engine\Vector.cs" />
+    <Compile Include="GameManager\ImageManager.cs" />
+    <Compile Include="GameManager\SoundManager.cs" />
     <Compile Include="Game\Enemy.cs" />
     <Compile Include="Game\Entity.cs" />
     <Compile Include="Game\FieldView.cs" />
@@ -79,16 +81,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\Windows\x86\Debug\MonoGame.Framework.dll</HintPath>
     </Reference>
-    <Reference Include="OpenTK, Version=1.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Windows\x86\Debug\OpenTK.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tao.Sdl, Version=1.2.13.0, Culture=neutral, PublicKeyToken=9c7a200e36c0094e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Windows\x86\Debug\Tao.Sdl.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
