--- a/LevelEditor/LevelEditor.csproj
+++ b/LevelEditor/LevelEditor.csproj
@@ -49,6 +49,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="Editor.resx">
       <DependentUpon>Editor.cs</DependentUpon>
     </EmbeddedResource>
